# libnnet

./: .gitignore  AUTHORS  CONTRIBUTE  ChangeLog  INSTALL  Makefile.am  README.md  TRANSLATORS  bootstrap  configure.ac
include/: libnnet.h
po/: .gitignore  ChangeLog  Makefile.am  Makevars
src/: .gitignore  Makefile.am  libnnet.c
tests/: .gitignore  Makefile.am  test.c
